cdu06_output_3.log
Reusing configuration cache.
> Task :backend:processResources UP-TO-DATE
> Task :backend:processTestResources UP-TO-DATE
> Task :backend:compileJava UP-TO-DATE
> Task :backend:classes UP-TO-DATE

> Task :backend:compileTestJava
/app/backend/src/test/java/sgc/integracao/CDU06IntegrationTest.java:96: error: unreachable statement
        when(sgrhService.buscarPerfisUsuario(anyString()))
        ^
1 error

> Task :backend:compileTestJava FAILED

[Incubating] Problems report is available at: file:///app/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':backend:compileTestJava'.
> Compilation failed; see the compiler output below.
  /app/backend/src/test/java/sgc/integracao/CDU06IntegrationTest.java:96: error: unreachable statement
          when(sgrhService.buscarPerfisUsuario(anyString()))
          ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 3s
4 actionable tasks: 1 executed, 3 up-to-date
Configuration cache entry reused.
